--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!-- 参考資料 -->
-<!-- http://liginc.co.jp/web/js/132533 -->
-<!-- http://qiita.com/kazuhei0108/items/945f7bcb0dc2a02728a3 -->
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -12,14 +8,15 @@
 	<div id="map"></div>
 	<textarea name="" id="msg" class="input" cols="30" rows="4"></textarea>
     <button name="button" onClick="clickEvent()">送信</button>
+    <a href="chatHistory.html">一覧</a>
 
 <!-- 読み込みファイルstart -->
     <script type="text/javascript" src="lib/jquery-3.0.0.min.js"></script>
     <script type="text/javascript" src="https://cdn.mlkcca.com/v2.0.0/milkcocoa.js"></script>
     <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true"></script>
     <script type="text/javascript" src="lib/gmaps.js"></script>
-    <script type="text/javascript" src="main.js"></script>
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <script type="text/javascript" src="js/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
 <!-- 読み込みファイルend -->
 </body>
 </html>
