複数人の際、一方がコメントするともう一方のコメントが消えちゃう問題解消。その他修正。

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <body>
 	<div id="map"></div>
 	<textarea name="" id="msg" class="input" cols="30" rows="4"></textarea>
+    <select name="userId" id="userId" data-theme="e" data-native-menu="true" data-overlay-theme="e">
+        <option value="user1">user1</option>
+        <option value="user2">user2</option>
+        <option value="user3">user3</option>
+        <option value="user4">user4</option>
+    </select>
     <button name="button" onClick="clickEvent()">送信</button>
     <a href="chatHistory.html">一覧</a>
 
